Add project customization

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "npm run test:validate && npm run test:unit && npm run test:features",
     "test:features": "npm run local-webserver & (wdio wdio.BUILD.conf.js; wdio_ret=$?; forever stopall; exit $wdio_ret)",
     "test:unit": "jest --config=jest.json",
-    "test:validate": "eslint 'src/**/*.js' 'test/**/*.js!(setup.js)'"
+    "test:validate": "eslint 'src/**/*.js' 'test/**/*.js!(setup.js)'",
+    "wdio-watch": "yarn run wdio --watch"
   },
   "repository": {
     "type": "git",
